# bevy_eventwork_websocket_json_demo

./: README.md
client/: index.html  package-lock.json
client/src/: main.ts
server/: Cargo.toml
server/src/: main.rs  protocol.rs  serializer.rs
