[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14.0"
bevy_eventwork = { git = "https://github.com/NoahShomette/bevy_eventwork.git", branch = "true-dynamic-serialization-2" }
bevy_eventwork_mod_websockets = { git = "https://github.com/NoahShomette/bevy_eventwork_mod_websockets.git", branch = "serialization" }
serde = "1.0.203"
serde_json = "1.0.118"
